metadata/force-app/main/default/objects/CustomName_JEqwk__c/CustomName_JEqwk__c.object-meta.xml
<CustomObject>
    <description>Description_CRcEi</description>
    <label>CustomLabel_EOEHD</label>
    <nameField>
        <label>CustomLabel_EOEHD</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_EOEHDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>