metadata/force-app/main/default/objects/CustomName_JEqwk__c/fields/CustomField_zIdaM__c.field-meta.xml
<CustomField>
    <fullName>CustomField_zIdaM__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldkXpna</label>
    <length>255</length>
    <type>Text</type>
</CustomField>